Added a sentence linking to the First Contributions repository
This will hopefully help those who come to this list but don't actually know how to contribute using git and github.
This change has been made to the README-template.j2.


Co-authored-by: Roshan Jossy <roshanjossey@gmail.com>

--- a/.github/README-template.j2
+++ b/.github/README-template.j2
@@ -10,6 +10,9 @@ Inspired by [First Timers Only](https://kentcdodds.com/blog/first-timers-only) b
 If you are a maintainer of open-source projects, add the label `first-timers-only` (or similar) to your project and list it here so that people can find it.
 
 If you are not a programmer but would like to contribute, check out the [Awesome for non-programmers](https://github.com/szabgab/awesome-for-non-programmers) list.
+
+If you would like to be guided through how to contribute to a repository on GitHub, check out [the First Contributions repository](https://github.com/firstcontributions/first-contributions).
+
 ## Table of Contents:
 
 ||Languages|
