--- a/.github/README-template.j2
+++ b/.github/README-template.j2
@@ -6,7 +6,7 @@
 <div align="center">
   <div>
     <a href="https://go.warp.dev/awesome-for-beginners">
-      <img alt="Thanks to Warp.dev for sponsoring this repository through a domation to a charity of my choice." src="https://raw.githubusercontent.com/warpdotdev/brand-assets/refs/heads/main/Github/Warp%20Packs/Warp-Github-SM-01.jpg">
+      <img alt="Thanks to Warp.dev for sponsoring this repository through a donation to a charity of my choice." src="https://raw.githubusercontent.com/warpdotdev/brand-assets/refs/heads/main/Github/Warp%20Packs/Warp-Github-SM-01.jpg">
     </a>
   </div>
 </div>
@@ -40,7 +40,7 @@ Contributions are welcome! See the [contributing guidelines](CONTRIBUTING.md).
 
 ## Thanks to GitHub Sponsors
 
-Thanks to Warp.dev for sponsoring this repository through a domation to a charity of my choice.
+Thanks to Warp.dev for sponsoring this repository through a donation to a charity of my choice.
 
 <table><tr>{% for sponsor in sponsors %}{% if loop.index != 1 and (loop.index - 1) % 6 == 0 %}</tr><tr>{% endif %}<td align="center"><a href="{{ sponsor.link }}"><img src="{{ sponsor.image }}" width="60px;" alt=""/><br/><sub><b>{{ sponsor.name }}</b></sub></a></td>{% endfor %}</tr></table>
 
