--- a/.github/README-template.j2
+++ b/.github/README-template.j2
@@ -3,6 +3,14 @@
 <!-- SEE THE CONTRIBUTING GUIDE (`CONTRIBUTING.md`) FOR MORE GUIDANCE -->
 <!-- YOU MAY IGNORE THIS MESSAGE IF YOU ARE EDITING `README-template.j2` -->
 
+<div align="center">
+  <div>
+    <a href="https://go.warp.dev/awesome-for-beginners">
+      <img alt="Thanks to Warp.dev for sponsoring this repository through a donation to a charity of my choice." src="https://raw.githubusercontent.com/warpdotdev/brand-assets/refs/heads/main/Github/Warp%20Packs/Warp-Github-SM-01.jpg">
+    </a>
+  </div>
+</div>
+
 # Awesome First Pull Request Opportunities [![Awesome](https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg)](https://github.com/sindresorhus/awesome)
 
 Inspired by [First Timers Only](https://kentcdodds.com/blog/first-timers-only) blog post.
@@ -31,6 +39,8 @@ If you would like to be guided through how to contribute to a repository on GitH
 Contributions are welcome! See the [contributing guidelines](CONTRIBUTING.md).
 
 ## Thanks to GitHub Sponsors
+
+Thanks to Warp.dev for sponsoring this repository through a donation to a charity of my choice.
 
 <table><tr>{% for sponsor in sponsors %}{% if loop.index != 1 and (loop.index - 1) % 6 == 0 %}</tr><tr>{% endif %}<td align="center"><a href="{{ sponsor.link }}"><img src="{{ sponsor.image }}" width="60px;" alt=""/><br/><sub><b>{{ sponsor.name }}</b></sub></a></td>{% endfor %}</tr></table>
 
