--- a/.github/README-template.j2
+++ b/.github/README-template.j2
@@ -6,7 +6,7 @@
 <div align="center">
   <div>
     <a href="https://go.warp.dev/awesome-for-beginners">
-      <img alt="Thanks to Warp.dev for sponsoring this repository through a donation to a charity of my choice." src="https://raw.githubusercontent.com/warpdotdev/brand-assets/refs/heads/main/Github/Warp%20Packs/Warp-Github-SM-01.jpg">
+      <img alt="Warp.dev sponsorship banner"
     </a>
   </div>
 </div>
